[gd_scene load_steps=5 format=3 uid="uid://dco2guxliehnh"]

[ext_resource type="Script" path="res://Inventory/item_details_overlay.gd" id="1_brky4"]
[ext_resource type="Theme" uid="uid://cjoh1pmvhw5l0" path="res://Themes/overall_theme.tres" id="2_s1kqc"]
[ext_resource type="Texture2D" uid="uid://cui56gkpy2e5v" path="res://DownloadAssets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Icons/special icons/stars.png" id="3_aley6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_71sc1"]
atlas = ExtResource("3_aley6")
region = Rect2(32, 16, 16, 16)

[node name="ItemDetailsOverlay" type="Control"]
custom_minimum_size = Vector2(225, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 300.0
script = ExtResource("1_brky4")
metadata/_edit_vertical_guides_ = [18.0]
metadata/_edit_horizontal_guides_ = [170.0]

[node name="Shadow" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0927129, 0.112281, 0.0636045, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.647059, 0.713726, 0.552941, 1)

[node name="ItemTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.1
anchor_bottom = 0.1
offset_right = 185.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = 160.0
offset_right = 180.0
offset_bottom = 290.0

[node name="ItemNameLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("2_s1kqc")
text = "Hello"
autowrap_mode = 2

[node name="HealthContainer" type="GridContainer" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 7

[node name="HealthLabel" type="Label" parent="GridContainer/HealthContainer"]
layout_mode = 2
theme = ExtResource("2_s1kqc")
text = "Health"

[node name="StarTextureRect" type="TextureRect" parent="GridContainer/HealthContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_71sc1")

[node name="StaminaContainer" type="GridContainer" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 7

[node name="StaminaLabel" type="Label" parent="GridContainer/StaminaContainer"]
layout_mode = 2
theme = ExtResource("2_s1kqc")
text = "Stamina"

[node name="TextureRect" type="TextureRect" parent="GridContainer/StaminaContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_71sc1")

[node name="StrengthContainer" type="GridContainer" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 7

[node name="StaminaLabel" type="Label" parent="GridContainer/StrengthContainer"]
layout_mode = 2
theme = ExtResource("2_s1kqc")
text = "Strength"

[node name="TextureRect" type="TextureRect" parent="GridContainer/StrengthContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_71sc1")

[node name="StarTextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
texture = SubResource("AtlasTexture_71sc1")
